# CodeRelease

./: .clang-format  .gitignore  CITATION.cff  CMakeLists.txt  CMakePresets.json  License.txt  README.md
Src/: CMakeLists.txt
Src/Controller/: AudioPlayer.cpp  AudioPlayer.h  BHToolBar.cpp  BHToolBar.h  ButtonToolBar.cpp  ButtonToolBar.h  CMakeLists.txt  ConsoleRoboCupCtrl.cpp  ConsoleRoboCupCtrl.h  Controller.qrc  GameController.cpp  GameController.h  ImageViewAdapter.cpp  LocalRobot.cpp  LocalRobot.h  LogPlayer.cpp  LogPlayer.h  RemoteRobot.cpp  RemoteRobot.h  RoboCupCtrl.cpp  RoboCupCtrl.h  RobotConsole.cpp  RobotConsole.h  SimulatedRobot.cpp  SimulatedRobot.h  StdInConsole.cpp  StdInConsole.h  TeamRobot.cpp
Src/Controller/Platform/: Joystick.h
Src/Controller/Platform/Linux/: Joystick.cpp  Joystick.h
Src/Controller/Platform/Windows/: Joystick.cpp  Joystick.h
Src/Controller/Platform/macOS/: Joystick.cpp  Joystick.h
Src/Controller/Representations/: AnnotationInfo.cpp  AnnotationInfo.h  ModuleInfo.cpp  ModuleInfo.h  TimeInfo.cpp  TimeInfo.h
Src/Controller/Views/: CABSLBehaviorView.cpp  CABSLBehaviorView.h  CABSLGraphView.cpp  CABSLGraphView.h  ColorSpaceView.cpp  ColorSpaceView.h  ConsoleView.cpp  ConsoleView.h  DotView.cpp  DotView.h  FieldView.cpp  FieldView.h  ImageView.cpp  ImageView.h  JointView.cpp  JointView.h  ModuleGraphView.cpp  PlotView.cpp  PlotView.h  SensorView.cpp  SensorView.h  View3D.cpp  View3D.h
Src/Controller/Views/AnnotationView/: AnnotationView.cpp  AnnotationView.h  AnnotationWidget.cpp  AnnotationWidget.h
Src/Controller/Views/DataView/: DataView.cpp  DataView.h  DataWidget.cpp  DataWidget.h  EditorEventFilter.cpp  PropertyEditorFactory.cpp  PropertyEditorFactory.h  PropertyManager.cpp  PropertyManager.h  PropertyTreeCreator.cpp  PropertyTreeCreator.h  PropertyTreeWriter.cpp  PropertyTreeWriter.h  TypeDescriptor.cpp  TypeDescriptor.h
Src/Controller/Views/KickView/: KickMenuBar.cpp  KickMenuBar.h  KickView.cpp  KickView.h  KickViewGLWidget.cpp  KickViewGLWidget.h  KickViewMath.cpp  KickViewMath.h  KickViewWidget.cpp  KickViewWidget.h  TabWidget.cpp  TabWidget.h
Src/Controller/Views/TimeView/: TimeView.cpp  TimeView.h  TimeWidget.cpp  TimeWidget.h
Src/Controller/Visualization/: DebugDrawing.cpp  DebugDrawing.h  DebugDrawing3D.cpp  DebugDrawing3D.h  HeaderedWidget.cpp  OpenGLMethods.cpp  OpenGLMethods.h  PaintMethods.cpp
Src/Utils/dorsh/: CMakeLists.txt  Initializer.cpp  Initializer.h  Session.cpp  Session.h  dorsh.cpp  dorsh.qrc  dorsh.rc
Src/Utils/dorsh/agents/: DataAgent.cpp  DataAgent.h
Src/Utils/dorsh/bhwrapper/: Framework.cpp  Framework.h
Src/Utils/dorsh/cmdlib/: AbstractConsole.cpp  AbstractConsole.h  Command.h  CommandAdapter.cpp  CommandAdapter.h  Commands.cpp  Commands.h  Context.cpp  Context.h  ProcessRunner.cpp  ProcessRunner.h  RobotCommand.cpp  RobotCommand.h
Src/Utils/dorsh/cmds/: AddRobotCmd.cpp  AddRobotCmd.h  CompileCmd.cpp  CompileCmd.h  DeleteLogsCmd.cpp  DeleteLogsCmd.h  DeployCmd.cpp  DeployCmd.h  DownloadCameraCalibrationsCmd.cpp  DownloadCameraCalibrationsCmd.h  DownloadLogsCmd.cpp  DownloadLogsCmd.h  ExitCmd.cpp  ExitCmd.h  HelpCmd.cpp  HelpCmd.h  PushConfigCmd.cpp  PushConfigCmd.h  RestartCmd.cpp  RestartCmd.h  SCPCmd.cpp  SCPCmd.h  SSHCmd.cpp  SSHCmd.h  ShortcutCmd.cpp  ShortcutCmd.h  ShowCmd.cpp  ShowCmd.h  ShutdownCmd.cpp  ShutdownCmd.h  SimCmd.cpp  SimCmd.h
Src/Utils/dorsh/icons/: dorsh_terminal.icns
Src/Utils/dorsh/models/: Power.cpp  Power.h  Robot.cpp  Robot.h  Team.cpp  Team.h
Src/Utils/dorsh/tools/: Directory.cpp  Directory.h  Filesystem.cpp  Filesystem.h  Platform.cpp  Platform.h  ShellTools.cpp  ShellTools.h  Sleeper.h  StringTools.cpp  StringTools.h
Src/Utils/dorsh/ui/: CommandLineCompleter.cpp  CommandLineEdit.cpp  CommandLineEdit.h  Console.cpp  Console.h  MainWindow.cpp  MainWindow.h  RobotPool.cpp  RobotPool.h  RobotView.cpp  RobotView.h  SensorWindow.cpp  SensorWindow.h  ShortcutBar.cpp  ShortcutBar.h  TeamSelector.cpp  TeamSelector.h  TeamView.cpp  TeamView.h  VisualContext.cpp  VisualContext.h
Src/naodevilsbase/: CMakeLists.txt  naodevilsbase.cpp  naodevilsbase.h
Src/sensorReader/: CMakeLists.txt  sensorReader.cpp  sensorReader.h
Util/SimRobot/Src/SimRobot/: CMakeLists.txt  Main.cpp  MainWindow.cpp  MainWindow.h  RegisteredDockWidget.cpp  RegisteredDockWidget.h  SceneGraphDockWidget.cpp  SceneGraphDockWidget.h  SimRobot.h  StatusBar.cpp  StatusBar.h  resource.h
Util/SimRobot/Src/SimRobot/Icons/: SimRobot.icns
Util/SimRobot/Src/SimRobotCore2/: ActuatorsWidget.cpp  ActuatorsWidget.h  CMakeLists.txt  CoreModule.cpp  CoreModule.h  SensorWidget.cpp  SensorWidget.h  SimObjectRenderer.cpp  SimObjectRenderer.h  SimObjectWidget.cpp  SimObjectWidget.h  SimRobotCore2.h
Util/SimRobot/Src/SimRobotCore2/Parser/: Parser.cpp  Parser.h  Reader.cpp  Reader.h
Util/SimRobot/Src/SimRobotCore2/Platform/: Assert.cpp  Assert.h  OffscreenRenderer.cpp  OffscreenRenderer.h  System.cpp
Util/SimRobot/Src/SimRobotCore2/Simulation/: Axis.cpp  Axis.h  Body.cpp  Body.h  Compound.cpp  Compound.h  GraphicalObject.cpp  PhysicalObject.cpp  Scene.cpp  Scene.h  SimObject.cpp  SimObject.h  Simulation.cpp  Simulation.h  UserInput.cpp  UserInput.h
Util/SimRobot/Src/SimRobotCore2/Simulation/Actuators/: Actuator.cpp  Actuator.h  Hinge.cpp  Joint.cpp  Slider.cpp
Util/SimRobot/Src/SimRobotCore2/Simulation/Appearances/: Appearance.cpp  Appearance.h  BoxAppearance.cpp  ComplexAppearance.cpp  (+1 more)
Util/SimRobot/Src/SimRobotCore2/Tools/: Math.h  Matrix3x3.cpp  Matrix3x3.h  ODETools.h  OpenGLTools.h  Pose3.h  Texture.cpp  Texture.h  Vector3.cpp  Vector3.h
Util/SimRobot/Src/SimRobotEditor/: CMakeLists.txt  EditorModule.cpp  EditorModule.h  EditorWidget.cpp  EditorWidget.h  SimRobotEditor.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h
Util/libqxt/: CMakeLists.txt  qxtspanslider.cpp
Util/qtpropertybrowser/: CMakeLists.txt  qteditorfactory.cpp  qtgroupboxpropertybrowser.cpp  qtpropertybrowserutils.cpp  qtpropertymanager.cpp  qtpropertymanager.h  qttreepropertybrowser.cpp  qtvariantproperty.cpp  qtvariantproperty.h
(+2257 files in other folders)
